# projeto-base-appium

./: .gitignore  .pabotsuitenames  README.MD  base.resource  docker-compose.yml  pyproject.toml  run_testes.py
devices/: devices.yml
resources/locators/: cadastro.yml  home.yml  interesses.yml  menu.yml  oqueprocura.yml  profile.yml  welcomeLocators.yml
resources/pages/: cadastro.resource  home.resource  interesses.resource  menu.resource  oqueProcura.resource  profile.resource  welcome.resource
resources/utils/: customKeywors.resource  openAppium.resource
template/: index.html
testes/: ted.robot
